[package]
name = "rpg-game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-graphql = { version = "7.0.3", default-features = false }
linera-sdk = { version = "0.15.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcs = "0.1.6"
linera-base-types = { version = "0.15.0" }
linera-views = { version = "0.15.0" }

[features]
test = ["linera-sdk/test"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true