[package]
name = "rpg-game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-graphql = { version = "7.0.3", default-features = false }
linera-sdk = { version = "0.15.0", default-features = false }
linera-views = { version = "0.15.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
bcs = "0.1.6"

[features]
test = ["linera-sdk/test"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[[bin]]
name = "rpg_game_contract"
path = "src/contract.rs"

[[bin]]
name = "rpg_game_service"
path = "src/service.rs"